--- a/PROFIL.html
+++ b/PROFIL.html
@@ -53,6 +53,17 @@
       line-height: 1.7;
     }
 
+    .right-bottom-text {
+      margin-top: 30px;
+      text-align: right;
+    }
+
+    .right-bottom-text a {
+      color: #0d47a1;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
     footer {
       background-color: #0d47a1;
       color: white;
@@ -73,7 +84,7 @@
   <h2>Tentang Kami</h2>
   <p>
     <strong>SAJEFU HOTEL</strong> adalah hotel modern dan nyaman yang terletak di pusat kota. Berdiri sejak tahun 2020, kami berkomitmen untuk memberikan pengalaman menginap terbaik bagi setiap tamu, baik wisatawan maupun pelaku bisnis. 
-    Nama <strong>SAJEFU</strong> merupakan singkatan dari pendiri: <strong>Sabila, Jerry,Febri dan Ayu</strong>, yang menggabungkan nilai-nilai keramahan, profesionalisme, dan kualitas pelayanan.
+    Nama <strong>SAJEFU</strong> merupakan singkatan dari pendiri: <strong>Sabila, Jerry, Febri dan Ayu</strong>, yang menggabungkan nilai-nilai keramahan, profesionalisme, dan kualitas pelayanan.
   </p>
 
   <h2>Visi</h2>
@@ -96,11 +107,12 @@
     <li><strong>Excellence:</strong> Terus berinovasi dan meningkatkan kualitas.</li>
     <li><strong>Responsibility:</strong> Bertanggung jawab terhadap tamu dan lingkungan.</li>
   </ul>
-<section>
-    <div class="right-bottom-text">
-  <a href="beranda.html"> -BERANDA</a> 
+
+  <div class="right-bottom-text">
+    <a href="index.html">← Kembali ke Beranda</a>
+  </div>
 </div>
-   
+
 <footer>
   &copy; 2025 SAJEFU HOTEL | Profil Perusahaan
 </footer>
